REG-353 Useful additions to README along with host port mappings for hbase and correct branch for sbr-control-api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,3 +61,7 @@ services:
   hbase:
     image: "dajobe/hbase"
     hostname: hbase
+    ports:
+      - "16010:16010"
+      - "8085:8085"
+      - "9095:9095"
