--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     environment:
      - APPLICATION_SECRET=Fkn42Sd0Xw;EhdZ2MaXrPjf<WV16IYKn>JiSKL_bt/<uWYaGHMTemJFyX3WpAr6U
   sbr-ch-data:
-    image: "ons-sbr-admin-data:0.1.0-SNAPSHOT"
+    image: "sbr-admin-data:0.1.0-SNAPSHOT"
     ports:
       - "9003:9000"
     environment:
@@ -32,10 +32,10 @@ services:
       - HBASE_TABLE_NAME=ch
       - HBASE_INITIALIZE_DB=true
       - CSV_FILE=conf/sample/201706/ch-data.csv
-      - CSV_HEADER_STRING=companyname
+      - HEADER_STRING=companyname
       - SBR_VALIDATION_ID_REGEX=.{3,8}
   sbr-vat-data:
-    image: "ons-sbr-admin-data:0.1.0-SNAPSHOT"
+    image: "sbr-admin-data:0.1.0-SNAPSHOT"
     ports:
       - "9004:9000"
     environment:
@@ -44,10 +44,10 @@ services:
       - HBASE_TABLE_NAME=vat
       - HBASE_INITIALIZE_DB=true
       - CSV_FILE=conf/sample/201706/vat-data.csv
-      - CSV_HEADER_STRING=entref,vatref
+      - HEADER_STRING=vatref
       - SBR_VALIDATION_ID_REGEX=.{12}
   sbr-paye-data:
-    image: "ons-sbr-admin-data:0.1.0-SNAPSHOT"
+    image: "sbr-admin-data:0.1.0-SNAPSHOT"
     ports:
       - "9005:9000"
     environment:
@@ -56,7 +56,7 @@ services:
       - HBASE_TABLE_NAME=paye
       - HBASE_INITIALIZE_DB=true
       - CSV_FILE=conf/sample/201706/paye-data.csv
-      - CSV_HEADER_STRING=entref,payeref
+      - HEADER_STRING=payeref
       - SBR_VALIDATION_ID_REGEX=.{4,12}
   hbase:
     image: "dajobe/hbase"
